fix svg not showing in safari

--- a/packages/opub-ui/assets/base.css
+++ b/packages/opub-ui/assets/base.css
@@ -7,6 +7,14 @@ body {
   --outline-offset: 2px;
 }
 
+body svg {
+  position: relative;
+  display: block;
+  width: 100%;
+  max-width: 100%;
+  max-height: 100%;
+}
+
 *,
 ::after,
 ::before {
