--- a/packages/opub-ui/src/components/ActionList/ActionList.module.scss
+++ b/packages/opub-ui/src/components/ActionList/ActionList.module.scss
@@ -113,10 +113,6 @@
   fill: var(--icon);
 }
 
-.SuffixWrapper {
-  line-height: 0;
-}
-
 .Text {
   min-width: 0;
   max-width: 100%;
